# riverraid_2026

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md  api-http.md  data-model.md  game-vision.md  login-cache-service.md  mvp-scope.md  realtime-protocol.md  roadmap.md  system_design.md  technical-architecture.md
src/riverraid/: app.py  main.py
src/riverraid/application/: game_session_service.py  ports.py  session_entities.py  session_runtime.py  use_cases.py
src/riverraid/config/: game.yaml
src/riverraid/domain/: models.py
src/riverraid/infrastructure/: config_credential_provider.py  database.py  game_config.py  game_result_repository.py  jwt_token_service.py  models.py  settings.py
src/riverraid/interfaces/http/: demo_page.py  demo_script.py  demo_style.py  games_page.py  routes.py  schemas.py
src/riverraid/interfaces/ws/: gateway.py
tests/: conftest.py  test_auth_501.py  test_auth_login.py  test_jwt_service.py  test_root_page.py  test_scores.py  test_settings.py  test_ws_join.py
